Dataset  with movie description as key and genres and value created

--- a/genre_classifier.ipynb
+++ b/genre_classifier.ipynb
@@ -14,6 +14,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -95,11 +102,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset creation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "movie_descriptions = []\n",
+    "dataset = {'desciption':[], 'labels':[]}\n",
+    "\n",
+    "movie_genres = []\n",
+    "genres_ids = []\n",
+    "\n",
+    "with open('./Dataset_MovieSummaries/movie.metadata.tsv') as f1:\n",
+    "    movie_genres_ = csv.reader(f1, delimiter='\\t')\n",
+    "\n",
+    "    # Extracting genres from the metadata\n",
+    "    for line in movie_genres_:\n",
+    "         \n",
+    "        genres = json.loads(line[8]).values()\n",
+    "        genres = list(genres)\n",
+    "        movie_genres.append(genres)\n",
+    "        id = json.loads(line[0])\n",
+    "        id = int(id)\n",
+    "        genres_ids.append(id)\n",
+    "\n",
+    "# Creating a dict of movie ids as key and their genres and values.       \n",
+    "genres_and_ids = dict(zip(genres_ids, movie_genres))\n",
+    "\n",
+    "with open('./Dataset_MovieSummaries/plot_summaries.txt') as f2:\n",
+    "    movie_description = csv.reader(f2, delimiter='\\t')\n",
+    "    \n",
+    "    for line in movie_description:\n",
+    "\n",
+    "        desciption = line[1]\n",
+    "        id = int(line[0])\n",
+    "\n",
+    "        # Handling the movies that no genre is available for them!\n",
+    "        if id in genres_and_ids:\n",
+    "            dataset['desciption'].append(desciption)\n",
+    "            dataset['labels'].append(genres_and_ids[id])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81741"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(movie_genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42303"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(movie_descriptions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----> `For some movies no genre is available .`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Shlykov, a hard-working taxi driver and Lyosha, a saxophonist, develop a bizarre love-hate relationship, and despite their prejudices, realize they aren't so different after all.\""
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['desciption'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Drama', 'World cinema']"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['labels'][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42204"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset['desciption'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "42204"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(dataset['labels'])"
+   ]
   }
  ],
  "metadata": {
