minor changes made

--- a/genre_classifier.ipynb
+++ b/genre_classifier.ipynb
@@ -144,7 +144,7 @@
     "        desciption = line[1]\n",
     "        id = int(line[0])\n",
     "\n",
-    "        # Handling the movies that no genre is available for them!\n",
+    "        # Handling the movies that no genre methadata is available for them!\n",
     "        if id in genres_and_ids:\n",
     "            dataset['desciption'].append(desciption)\n",
     "            dataset['labels'].append(genres_and_ids[id])\n",
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "----> `For some movies no genre is available .`"
+    "----> `For some movies no genre metadata is available .`"
    ]
   },
   {
