more minor changes

--- a/genre_classifier.ipynb
+++ b/genre_classifier.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,6 +143,7 @@
     "\n",
     "        desciption = line[1]\n",
     "        id = int(line[0])\n",
+    "        movie_descriptions.append(movie_descriptions)\n",
     "\n",
     "        # Handling the movies that no genre methadata is available for them!\n",
     "        if id in genres_and_ids:\n",
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
        "81741"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +183,7 @@
        "42303"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,6 +277,24 @@
    ],
    "source": [
     "len(dataset['labels'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There was no genre metadata available for 99 movies!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "missing = len(movie_descriptions) - len(dataset['desciption'])\n",
+    "print(f'There was no genre metadata available for {missing} movies!!')"
    ]
   }
  ],
