intended labels to use

--- a/genre_classifier.ipynb
+++ b/genre_classifier.ipynb
@@ -104,32 +104,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thriller\n",
-      "Horror\n",
-      "Action\n",
-      "Drama\n",
-      "Crime Fiction\n",
-      "Short Film\n",
+      "Science Fiction\n",
+      "Mystery\n",
+      "Romantic drama\n",
+      "Animation\n",
+      "Musical\n",
+      "Comedy film\n",
+      "Action/Adventure\n",
+      "Family Film\n",
+      "Adventure\n",
       "Silent film\n",
+      "Horror\n",
+      "Documentary\n",
       "Indie\n",
-      "Black-and-white\n",
-      "Comedy\n",
+      "Crime Fiction\n",
       "World cinema\n",
+      "Short Film\n",
+      "Thriller\n",
+      "Action\n",
+      "Black-and-white\n",
       "Romance Film\n",
-      "Documentary\n"
+      "Comedy\n",
+      "Drama\n"
      ]
     }
    ],
    "source": [
     "for key,val in movies.items():\n",
-    "    if val >= 5000:\n",
+    "    if val >= 3000:\n",
     "        print (key)"
    ]
   },
