--- a/poster-template/hbrs-poster.tex
+++ b/poster-template/hbrs-poster.tex
@@ -12,6 +12,7 @@
 \usepackage{wrapfig} 
 \usepackage{enumitem}
 \usepackage{subfiles}
+\usepackage{graphicx}
 \usepackage{url}
 \usepackage{tikz}
 \usepackage{listings}
