--- a/poster-template/subfiles/section2.tex
+++ b/poster-template/subfiles/section2.tex
@@ -3,6 +3,12 @@
 \begin{document}
     \block{ Methodology}
     {
-        Your content here
+        \begin{tikzfigure}
+            \includegraphics[width=0.4\textwidth, height=0.245\textheight]{figures/Unbenanntes Diagramm.png}
+        \end{tikzfigure}
+
+        \begin{tikzfigure}
+            \includegraphics[width=0.35\textwidth, height=0.165\textheight]{figures/wordcloud.png}
+        \end{tikzfigure}
     }
 \end{document}
