--- a/poster-template/subfiles/contact.tex
+++ b/poster-template/subfiles/contact.tex
@@ -4,14 +4,19 @@
     \block{Contact}
     {
         \begin{minipage}{0.75\linewidth}
-            Your Name\newline
+            Nigitha Selvraj\newline
             Hochschule Bonn-Rhein-Sieg\newline
-            Email: name.lastname@domain.com\newline
+            Email: ??\newline
+        \end{minipage}
+        \begin{minipage}{0.75\linewidth}
+            Amirhossein Soltani\newline
+            Hochschule Bonn-Rhein-Sieg\newline
+            Email: amirhossein.soltani@smail.inf.h-brs.de\newline
         \end{minipage}
         \begin{minipage}{0.24\linewidth}
             \vspace{-1.5cm}
             \begin{tikzfigure}
-                \includegraphics[scale=3]{figures/qrcode.eps}
+                \includegraphics[scale=0.2]{figures/qrcode.eps}
             \end{tikzfigure}
         \end{minipage}
     }
