--- a/poster-template (1)/subfiles/contact.tex
+++ b/poster-template (1)/subfiles/contact.tex
@@ -6,7 +6,7 @@
         \begin{minipage}{0.75\linewidth}
             Nigitha Selvraj\newline
             Hochschule Bonn-Rhein-Sieg\newline
-            Email: ??\newline
+            Email: nigitha.selvaraj@smail.inf.h-brs.de\newline
         \end{minipage}
         \begin{minipage}{0.75\linewidth}
             Amirhossein Soltani\newline
