Bert embedding added

--- a/src/text_preprocessing.ipynb
+++ b/src/text_preprocessing.ipynb
@@ -20,6 +20,9 @@
     "from wordcloud import WordCloud\n",
     "from typing import List\n",
     "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from transformers import BertModel, BertTokenizer\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import csv\n",
@@ -495,11 +498,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## BERT model to create the embeddings"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Preprocess and generate embeddings\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state = 123)\n",
+    "\n",
+    "model_name = 'bert-base-uncased'\n",
+    "tokenizer = BertTokenizer.from_pretrained(model_name)\n",
+    "model = BertModel.from_pretrained(model_name)\n",
+    "\n",
+    "\n",
+    "def preprocess_text(text, tokenizer, max_length=512):\n",
+    "    encoding = tokenizer.encode_plus(\n",
+    "        text,\n",
+    "        max_length=max_length,\n",
+    "        truncation=True,\n",
+    "        padding='max_length',\n",
+    "        add_special_tokens=True,\n",
+    "        return_tensors='pt',\n",
+    "        return_attention_mask=True\n",
+    "    )\n",
+    "    return encoding['input_ids'], encoding['attention_mask']\n",
+    "\n",
+    "\n",
+    "def embedding_creator(X_dataframe):\n",
+    "\n",
+    "    embeddings = []\n",
+    "\n",
+    "    for i in range(len(X_dataframe)):\n",
+    "\n",
+    "        for plot in X_dataframe.iloc[i]: #plot_summaries\n",
+    "\n",
+    "            input_ids, attention_mask = preprocess_text(plot, tokenizer)\n",
+    "            with torch.no_grad():\n",
+    "                outputs = model(input_ids, attention_mask=attention_mask)\n",
+    "            \n",
+    "            last_hidden_state = outputs.last_hidden_state\n",
+    "            cls_embedding = last_hidden_state[:, 0, :]\n",
+    "\n",
+    "            embeddings.append(cls_embedding)\n",
+    "    \n",
+    "    return embeddings\n",
+    "\n",
+    "X_train_bert, X_test_bert = embedding_creator(X_train) , embedding_creator(X_test)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
